tests/zer_fail/dalpha6_flush_all_args.zer
// EXPECTED: compile error
// @tlb_flush_all takes no arguments

i32 main() {
    @tlb_flush_all(1);  // error: takes no args
    return 0;
}
